2001-03-12  Robin * Slomkowski  <rslomkow@rslomkow.org>

	* configure.in: upped to version 1.0

2001-03-09  Robin * Slomkowski  <rslomkow@eazel.com>

	* configure.in: 0.9.1

2001-03-09  Robin * Slomkowski  <rslomkow@eazel.com>

	* configure.in: upped to version 1.0

2001-03-07  Maciej Stachowiak  <mjs@eazel.com>

	reviewed by: Robin Slomkowski  <rslomkow@eazel.com>

	* gnome-vfs-config.in: Tweak so output is 1.1, not gnome-vfs-1.1
	to be consistent with other -config scripts and stop confusing
	control-center's configure; fixes tinderbox.

2001-03-07  Maciej Stachowiak  <mjs@eazel.com>

	* gnome-vfs.spec.in: Add gnome-vfs-config to silence tinderbox.
	
2001-03-07  Darin Adler  <darin@eazel.com>

	Merge from HEAD:

        * gnome-vfs.spec.in: Remove file-types-capplet too.

2001-03-07  Pavel Cisler  <pavel@eazel.com>

	Merge from HEAD:

	2001-03-07  Pavel Cisler  <pavel@eazel.com>
	
	reviewed by: Darin Adler  <darin@eazel.com> (reluctantly)

	Fixed 7495 (Need to test condition after pthread_cond_wait)
	
	* libgnomevfs-pthread/gnome-vfs-thread-pool.c:
	(gnome_vfs_thread_pool_wait_for_work), (thread_entry):
	Work around what is described as a spurious wakeup of
	condition variables in the Pthread standard.
	Added a while loop around pthread_cond_wait checking if
	an entry_point is lined up.

2001-03-07  Maciej Stachowiak  <mjs@eazel.com>

	reviewed by: Darin Adler  <darin@eazel.com>
	             Gene Z. Ragan  <gzr@eazel.com>

	Part of the fix for bugzilla.eazel.com bug 588 (Remove old "MIME
	types" capplet from control center) - merged from HEAD

	* Makefile.am: Remove mime-type-capplet subdir.

	* configure.in: Don't create mime-type-capplet Makefiles or check
	for control-center.

	* gnome-vfs.spec.in: remove control-center dependency.

	* mime-type-capplet/*: removed.

	* po/POTFILES.in: Remove mime-type-capplet files

2001-03-06  Darin Adler  <darin@eazel.com>

	* configure.in: Bump version to 0.9 (upcoming release will be